initialTriple could work